<resources>
    <string name="app_name">Purrfect Aid</string>
    <string name="community">Community</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ilustration">Ilustration</string>
    <string name="next">Next</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consec…</string>
    <string name="_1_of_3">1 of 3</string>
    <string name="_2_of_3">2 of 3</string>
    <string name="sign_up_or_sign_in">Sign Up or Sign In</string>
    <string name="_3_of_3">3 of 3</string>
    <string name="vet">Vet</string>
    <string name="read_more"><u>Read more</u></string>
    <string name="placeholder_trending_title">Does this cat really have fleas issue?</string>
    <string name="see_more">See more</string>
    <string name="placeholder_date_diagnose">Wed, Jan 18 2023</string>
    <string name="scabies">Scabies</string>
    <string name="to_detail_diagnose">To detail diagnose</string>
    <string name="diagnose_history">Diagnose History</string>
    <string name="trending_on_community">Trending on Community</string>
    <string name="welcome">Welcome!</string>
    <string name="hello_with_name">Hello, %s!</string>
    <string name="logo">Purrfect Aid</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with google</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="instruction_position_scan">Please position the target skin in the highlighted box</string>
    <string name="scanFragment">scanFragment</string>
    <string name="nearest_vet">Nearest Vet</string>
    <string name="find_nearest_vet">Find\nNearest Vet</string>
    <string name="save_diagnose">Save       Diagnose</string>
    <string name="first_opening_subtitle">Purrfect Aid is your go-to app for first aid and disease identification tools for stray animals. Join our community of animal welfare supporters and make a difference in the lives of these animals in need.</string>
    <string name="second_opening_subtitle">Quickly identify symptoms and provide necessary care for stray animals with Purrfect Aid.</string>
    <string name="third_opening_subtitle">Join our community of animal welfare supporters on Purrfect Aid and share your knowledge and resources to help care for stray animals. Together, we can make a difference in the lives of these animals.</string>
    <string name="maps_api_key">AIzaSyAlXcP6HBdRO5z9uOBl5e5zUsz_VgLeFhM</string>
    <string name="settings">Settings</string>
    <string name="tab_title_1">Post</string>
    <string name="tab_title_2">Saved Post</string>
    <string name="tab_title_3">Saved Diagnose</string>
</resources>