<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/icon_style_home"
        android:title="@string/home" />

    <item
        android:id="@+id/vetFragment"
        android:icon="@drawable/icon_style_vet"
        android:title="@string/vet" />

    <item
        android:id="@+id/scanFragment"
        android:icon="@drawable/icon_style_scan"
        android:title="@string/scan" />

    <item
        android:id="@+id/communityFragment"
        android:icon="@drawable/icon_style_community"
        android:title="@string/community" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/icon_style_profile"
        android:title="@string/profile" />

</menu>