<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.opening.OpeningFirstFragment">

    <ImageView
        android:id="@+id/first_opening_ilustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-60dp"
        android:layout_marginTop="-60dp"
        android:contentDescription="@string/ilustration"
        android:src="@drawable/opening_ilustration_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/first_opening_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <TextView
        android:id="@+id/first_opening_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="Welcome to Purrfect Aid"
        android:textColor="@color/blue"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/first_opening_guideline" />

    <TextView
        android:id="@+id/first_opening_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/first_opening_subtitle"
        android:textColor="@color/blue"
        android:paddingHorizontal="5dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/first_opening_title"
        app:layout_constraintStart_toStartOf="@id/first_opening_title"
        app:layout_constraintTop_toBottomOf="@id/first_opening_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/first_opening_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/next"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:cornerRadius="30dp"
        app:icon="@drawable/ic_arrow_right"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_opening_guideline2"
        app:strokeColor="@color/blue"
        app:strokeWidth="1dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/first_opening_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:id="@+id/first_opening_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/_1_of_3"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/first_opening_button"
        app:layout_constraintStart_toStartOf="@id/first_opening_button"
        app:layout_constraintTop_toBottomOf="@id/first_opening_button" />

</androidx.constraintlayout.widget.ConstraintLayout>