<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/surface"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_diagnose"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/cat_diagnose_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImage" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/iv_diagnose"
            app:layout_constraintEnd_toStartOf="@id/btn_to_detail_diagnose"
            app:layout_constraintStart_toEndOf="@id/iv_diagnose"
            app:layout_constraintTop_toTopOf="@id/iv_diagnose">

            <TextView
                android:id="@+id/tv_diagnose_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/scabies"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_diagnose"
                app:layout_constraintTop_toTopOf="@id/iv_diagnose" />

            <TextView
                android:id="@+id/tv_diagnose_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/placeholder_date_diagnose"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toBottomOf="@id/iv_diagnose"
                app:layout_constraintStart_toEndOf="@id/iv_diagnose" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_to_detail_diagnose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/to_detail_diagnose"
            android:src="@drawable/ic_to_diagnose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>